--- a/exercicios/ex023/style.css
+++ b/exercicios/ex023/style.css
@@ -10,12 +10,18 @@ td {
     height: 35px;
 }
 
+h1 {
+    font-family: Arial, Helvetica, sans-serif;
+    background-color: darkgray;
+}
+
+html {
+    text-align: center;
+}
+
 th {
     border: 1px solid black;
     font-family: Arial, Helvetica, sans-serif;
-    background-color: rgb(63, 63, 63);
-    color: white;
-    height: 35px;
 }
 
 tbody > tr:nth-child(even) {
